<resources>
    <string name="app_name">OPSC7312_POE</string>

    <!-- PRIVACY POLICY -->
    <!-- privacy policy title -->
    <string name="privacy_title">Privacy</string>
    <!-- privacy policy text -->
    <string name="privacy_policy">
        At <b>UNO-HOME</b>, we value your privacy and are committed to protecting your personal information.
        This Privacy Policy outlines how we collect, use, disclose, and safeguard your information when you use our smart home
        application.\n\n

        <b>Personal Information Collected:\n</b>
        When you create an account or use the UNO-HOME app, we may collect the following personal information:\n
            \t\t\t- Name\n
            \t\t\t- Email address\n
            \t\t\t- Phone number\n
            \t\t\t- Home Address\n\n

        <b>Data Security\n</b>
        We take the security of your personal information seriously and implement reasonable measures to
        protect it from unauthorized access, disclosure, alteration, or destruction. However, please
        remember that no method of transmission over the internet or electronic storage is 100%% secure.\n\n

        By using the UNO-HOME app, you consent to the terms of this Privacy Policy. Thank you for choosing
        UNO-HOME to enhance your smart home experience!
    </string>

    <!-- LANGUAGE PAGE -->
    <!-- Language page title -->
    <string name="title">Language</string>
    <!-- Language page English button -->
    <string name="language1">English</string>
    <!-- Language page Afrikaans button -->
    <string name="language2">Afrikaans</string>

    <!-- ADD DEVICE PAGE -->
    <!-- add device page title -->
    <string name="add_devices_title">Add Devices</string>
    <!-- add device page button -->
    <string name="add_devices_button">Add Devices</string>

    <!-- ADD ROUTINE PAGE -->
    <!-- add routine page title -->
    <string name="add_routine_title">Add Routine</string>
    <!-- add routine page hint text -->
    <string name="enter_routine_name_hint">Enter routine name</string>
    <!-- add routine page timer title -->
    <string name="set_time_trigger_title">Set Time Trigger</string>
    <!-- add routine page set time button -->
    <string name="click_me_to_set_time_button">Click me to set time</string>
    <!-- add routine page choose routine title -->
    <string name="choose_routine_s_devices_title">Choose Routine\'s Devices</string>
    <!-- add routine page create routine button -->
    <string name="create_routine_button">Create Routine</string>

    <!-- ADD THEME PAGE -->
    <!-- add theme page title -->
    <string name="add_theme_title">Add Theme</string>
    <!-- add theme page hint text -->
    <string name="theme_name_hint_text">Theme Name</string>
    <!-- add theme page choose device title -->
    <string name="choose_theme_s_devices_title">Choose Theme\'s Devices</string>
    <!-- add theme page create theme button -->
    <string name="create_theme_button">Create Theme</string>

    <!-- MANAGE DEVICE PAGE -->
    <!-- manage device page title -->
    <string name="manage_device_title">Manage Device</string>
    <!-- manage device page hint text -->
    <string name="device_name_hint_text">Device Name</string>
    <!-- manage device page switch title -->
    <string name="turn_device_on_off_text">Turn device on/off</string>
    <!-- manage device page remove device button -->
    <string name="remove_device_button">Remove Device</string>

    <!-- LOGIN PAGE -->
    <!-- login page fingerprint button -->
    <string name="sign_in_with_fingerprint_button">Sign in with Fingerprint</string>
    <!-- login page google button -->
    <string name="continue_with_google_button">Continue with Google</string>

    <!-- MANAGE AUTOMATION PAGE -->
    <!-- manage automation page title -->
    <string name="manage_automation_title">Manage Automation</string>
    <!-- manage automation page routineName -->
    <string name="routinename_text">RoutineName</string>
    <!-- manage automation page turn off/on switch text -->
    <string name="turn_off_all_devices_title">Turn off all devices</string>
    <!-- manage automation page turn off button -->
    <string name="turn_off_button">Turn off</string>
    <!-- manage automation page disable/enable title -->
    <string name="disable_enable_routine_text">Disable/Enable routine</string>
    <!-- manage automation page switch text -->
    <string name="switch_text">Switch</string>
    <!-- manage automation page change starter title -->
    <string name="change_starter_title">Change starter</string>
    <!-- manage automation page change starter button -->
    <string name="click_me_to_set_time_automation_button">Click me to set time</string>
    <!-- manage automation page save button -->
    <string name="save_button">Save</string>

    <!-- NOTIFICATIONS PAGE -->
    <!-- notifications page title -->
    <string name="notifications_title">Notifications</string>
    <!-- notifications page on/off switch title -->
    <string name="turn_notifications_on_off_title">Turn Notifications On/Off</string>

    <!-- REGISTER PAGE -->
    <!-- register page email hint text -->
    <string name="email_hint_text">Email</string>
    <!-- register page password hint text -->
    <string name="password_hint_text">Password</string>
    <!-- register page confirm password hint text -->
    <string name="confirm_password_hint_text">Confirm Password</string>
    <!-- register page email register button -->
    <string name="register_button">Register</string>

    <!-- AUTOMATIONS PAGE -->
    <!-- automations page title -->
    <string name="routines_title">Routines</string>

    <!-- DASHBOARD PAGE -->
    <!-- dashboard page title -->
    <string name="sensor_readings_title">Sensor Readings:</string>
    <!-- dashboard page gas button -->
    <string name="gas_sensor_button">Gas Sensor</string>
    <!-- dashboard page steam button -->
    <string name="steam_sensor_button">Steam Sensor</string>
    <!-- dashboard page soil button -->
    <string name="soil_sensor_button">Soil Sensor</string>
    <!-- dashboard page reading button -->
    <string name="reading_button_text">Reading</string>
    <!-- dashboard page activity history button -->
    <string name="activity_history_button">Activity History</string>

    <!-- DEVICES PAGE -->
    <!-- devices page title -->
    <string name="devices_title">Devices</string>

    <!-- SENSOR HISTORY PAGE -->
    <!-- senosor history page title -->
    <string name="sensor_history_title">Sensor History</string>

    <!-- SETTINGS PAGE -->
    <!-- settings page title -->
    <string name="settings_title">Settings</string>
    <!-- settings page privacy button -->
    <string name="privacy_button">Privacy</string>
    <!-- settings page notification button -->
    <string name="notifications_button">Notifications</string>
    <!-- settings page language button -->
    <string name="app_language_button">App Language</string>
    <!-- settings page light/dark mode switch title -->
    <string name="dark_light_mode_switch_title">Dark/Light Mode</string>
    <!-- settings page switch text -->
    <string name="on_off_switch">On/Off</string>

    <!-- THEMES PAGE -->
    <!-- themes page title -->
    <string name="themes_title">Themes</string>

    <!-- NAV BAR ELEMENTS -->
    <!-- home title -->
    <string name="home_nav_bar_title">Home</string>
    <!-- devices title -->
    <string name="devices_nav_bar_title">Devices</string>
    <!-- routines title -->
    <string name="routines_nav_bar_title">Routines</string>
    <!-- themes title -->
    <string name="themes_nav_bar_title">Themes</string>
    <!-- settings title -->
    <string name="settings_nav_bar_title">Settings</string>


</resources>