<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/SCREEN"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/btnBackARP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="Back"
        android:src="@drawable/imgbackarrow" />

    <ImageView
        android:id="@+id/imgProfileIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/imgprofilepic"
        android:contentDescription="Profile Icon" />

    <TextView
        android:id="@+id/txtAddAutomationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        style="@style/TEXT"
        android:text="@string/add_routine_title"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtRoutineName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtAddAutomationTitle"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_routine_name_hint"
        style="@style/TEXT"
        android:padding="16dp"
        android:textColorHint="@android:color/darker_gray" />

    <TextView
        android:id="@+id/txtStarterLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtRoutineName"
        android:layout_marginTop="16dp"
        style="@style/TEXT"
        android:text="@string/set_time_trigger_title" />

    <Button
        android:id="@+id/btnSetTime"
        style="@style/BUTTON"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtStarterLabel"
        android:layout_marginTop="10dp"
        android:text="@string/click_me_to_set_time_button" />

    <TextView
        android:id="@+id/txtActionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnSetTime"
        android:layout_marginTop="16dp"
        style="@style/TEXT"
        android:text="@string/choose_routine_s_devices_title" />

    <ScrollView
        android:layout_width="371dp"
        android:layout_height="350dp"
        android:layout_below="@id/txtActionLabel"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:id="@+id/lstDevices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnCreateRoutine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnSetTime"
        android:layout_marginTop="420dp"
        style="@style/BUTTON"
        android:text="@string/create_routine_button"
        android:textStyle="bold" />

</RelativeLayout>


