<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SCREEN"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsPage">

    <TextView
        android:id="@+id/txtSettingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        style="@style/TEXT"
        android:text="@string/settings_title"
        android:textSize="28sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imgProfileIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="40dp"
        android:contentDescription="Profile Icon"
        android:src="@drawable/imgprofilepic" />

    <Button
        android:id="@+id/btnPrivacy"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/txtSettingsTitle"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="18sp"
        style="@style/BUTTON"
        android:text="@string/privacy_button"
        android:drawableLeft="@drawable/imgprivacy"
        android:drawablePadding="10dp" />

    <Button
        android:id="@+id/btnNotifications"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/btnPrivacy"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="18sp"
        style="@style/BUTTON"
        android:text="@string/notifications_button"
        android:drawableLeft="@drawable/imgnotificationssettings"
        android:drawablePadding="10dp" />

    <Button
        android:id="@+id/btnAppLanguage"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/btnNotifications"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="18sp"
        style="@style/BUTTON"
        android:text="@string/app_language_button"
        android:drawableLeft="@drawable/imglanguage"
        android:drawablePadding="10dp" />


    <Switch
        android:id="@+id/switcher"
        style="@style/TEXT"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblDarkLightMode"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="137dp"
        android:layout_marginLeft="165dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="116dp"
        android:text="@string/on_off_switch"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/lblDarkLightMode"
        style="@style/TEXT"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnAppLanguage"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="97dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="82dp"
        android:text="@string/dark_light_mode_switch_title"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>
